# Doctor-Who

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
apps/web/app/api/alerts/: route.ts
apps/web/app/api/devices/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/imports/: route.ts
apps/web/app/api/reports/: route.ts
apps/web/app/biometrics/: page.tsx
apps/web/app/connect/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/export/: page.tsx
apps/web/app/reports/: page.tsx
apps/web/app/reports/[id]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/sleep/: page.tsx
apps/web/components/: alert-banner.tsx  app-shell.tsx  biometrics-console.tsx  health-score-card.tsx  onboarding-wizard.tsx  report-chart.tsx  report-detail.tsx  report-metric-grid.tsx  reports-explorer.tsx  score-gauge.tsx  settings-tabs.tsx  sleep-mode-panel.tsx  theme-toggle.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  switch.tsx  tabs.tsx
apps/web/lib/: auth.ts  mock-data.ts  runtime-config.ts
apps/web/prisma/: schema.prisma  seed.ts
(+11 files in other folders)
